users list finished

--- a/CLIENT/index.html
+++ b/CLIENT/index.html
@@ -66,6 +66,7 @@
 <script src="js/App/controller/DashboardController.js"></script>
 <script src="js/App/controller/TestController.js"></script>
 <script src="js/App/controller/ProfilController.js"></script>
+<script src="js/App/controller/AdminDashboardController.js"></script>
 <script src="js/App/controller/UsersController.js"></script>
 <script src="js/angular-drag-and-drop-lists.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-animate.js"></script>
